update to title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta name="description" content="alex seol's website hosted on github pages" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>alexseolweb</title>
     <link rel="stylesheet" href="style.css">
 </head>
     <style>
